crates/tokio-otp/tests/ui/topology/options_message_size_unbounded.stderr
error[E0277]: the trait bound `Message: MessageSize` is not satisfied
  --> tests/ui/topology/options_message_size_unbounded.rs:18:46
   |
18 |     #[topology(options = ActorOptions::new().message_size())]
   |                                              ^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `MessageSize` is not implemented for `Message`
  --> tests/ui/topology/options_message_size_unbounded.rs:3:1
   |
 3 | struct Message;
   | ^^^^^^^^^^^^^^
note: required by a bound in `ActorOptions::<M>::message_size`
  --> src/actor/builder.rs
   |
   |     pub fn message_size(mut self) -> Self
   |            ------------ required by a bound in this associated function
   |     where
   |         M: MessageSize,
   |            ^^^^^^^^^^^ required by this bound in `ActorOptions::<M>::message_size`
